--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,8 +2,10 @@ FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build-env
 WORKDIR /App
 
 COPY *.csproj ./
+
 RUN dotnet restore
-COPY . . 
+
+COPY . ./ 
 RUN dotnet publish -c Release -o out
 FROM mcr.microsoft.com/dotnet/aspnet:8.0
 WORKDIR /App
