--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -6,7 +6,7 @@ WORKDIR /App
 COPY backend.csproj ./
 RUN dotnet restore
 
-# Copy only the required source and config files
+# Copy source and config files
 COPY backend/ ./backend
 COPY appsettings.json ./appsettings.json
 COPY appsettings.Development.json ./appsettings.Development.json
@@ -18,6 +18,13 @@ RUN dotnet publish -c Release -o out
 # Stage 2: Runtime stage
 FROM mcr.microsoft.com/dotnet/aspnet:8.0
 WORKDIR /App
+
+# Create a non-root user and set permissions
+RUN adduser --disabled-password --gecos "" appuser \
+    && chown -R appuser:appuser /App
+
+# Switch to the non-root user
+USER appuser
 
 # Copy the built application from the build stage
 COPY --from=build-env /App/out .
