--- a/backend/backend.api/docker-compose.yml
+++ b/backend/backend.api/docker-compose.yml
@@ -12,7 +12,8 @@ services:
     depends_on:
       - postgres
       - redis
-      - rabbitmq 
+      - rabbitmq
+      - prometheus  # Add Prometheus as a dependency
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
       - ASPNETCORE_URLS=http://+:8000
@@ -23,6 +24,7 @@ services:
       - RabbitMQ__Port=5672
       - RabbitMQ__Username=guest
       - RabbitMQ__Password=guest
+      - ASPNETCORE_METRICS_ENABLED=true  # Enable metrics
     restart: always
 
   postgres:
@@ -50,11 +52,40 @@ services:
     container_name: rabbitmq
     restart: always
     ports:
-      - "5672:5672" 
+      - "5672:5672"
       - "15672:15672"
     environment:
       RABBITMQ_DEFAULT_USER: guest
       RABBITMQ_DEFAULT_PASS: guest
 
+  prometheus:
+    image: prom/prometheus:latest
+    container_name: prometheus
+    restart: always
+    volumes:
+      - ./prometheus.yml:/etc/prometheus/prometheus.yml
+    ports:
+      - "9090:9090"
+
+  grafana:
+    image: grafana/grafana:latest
+    container_name: grafana
+    restart: always
+    ports:
+      - "3000:3000"
+    volumes:
+      - grafana_data:/var/lib/grafana
+    environment:
+      - GF_SECURITY_ADMIN_USER=admin
+      - GF_SECURITY_ADMIN_PASSWORD=admin
+
+  node-exporter:
+    image: prom/node-exporter:latest
+    container_name: node-exporter
+    restart: always
+    ports:
+      - "9100:9100"
+
 volumes:
   postgres_data:
+  grafana_data:
