--- a/backend/backend.api/appsettings.json
+++ b/backend/backend.api/appsettings.json
@@ -58,7 +58,7 @@
     "Password": "guest"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Server=localhost;Port=5432;Database=ecommerce-cart;Username=postgres;Password=postgres;"
+    "DefaultConnection": "Host=localhost;Server=localhost;Port=5432;Database=ecommerce-carts;Username=postgres;Password=postgres;"
   },
   "JWT": {
     "ValidAudience": "http://localhost:5000",
