--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,20 +37,20 @@ jobs:
 
       # Run Unit Tests
       # - name: Run Tests
-      #   run: dotnet test --no-build --configuration Release --collect:"XPlat Code Coverage"
-      #   working-directory: backend/backend.test
+      #   working-directory: backend
+      #   run: dotnet test backend.sln --no-build --configuration Release --collect:"XPlat Code Coverage"
       
-      # - name: Push Docker Image
-      #   if: github.ref == 'refs/heads/main'
-      #   uses: docker/login-action@v2
-      #   with:
-      #     username: ${{ secrets.DOCKER_USERNAME }}
-      #     password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Push Docker Image
+        if: github.ref == 'refs/heads/main'
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
-      # - name: Push Docker Image to Registry
-      #   run: |
-      #     docker tag your-docker-image-name:latest your-dockerhub-username/your-docker-image-name:latest
-      #     docker push your-dockerhub-username/your-docker-image-name:latest
+      - name: Push Docker Image to Registry
+        run: |
+          docker tag mdnafiulhasanhamim:latest mdnafiulhasanhamim/backend-image:latest
+          docker push mdnafiulhasanhamim/backend-image:latest
 
   publish:
     name: Publish Application
