--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,6 +40,11 @@ jobs:
       #   working-directory: backend
       #   run: dotnet test backend.sln --no-build --configuration Release --collect:"XPlat Code Coverage"
       
+      - name: Build Docker Image
+        run: |
+          docker build -t mdnafiulhasanhamim/backend-image:latest .
+        working-directory: backend/backend.api
+      
       - name: Push Docker Image
         if: github.ref == 'refs/heads/main'
         uses: docker/login-action@v2
