--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,12 +40,13 @@ jobs:
       #   working-directory: backend
       #   run: dotnet test backend.sln --no-build --configuration Release --collect:"XPlat Code Coverage"
       
-            - name: Build Docker Image
+      - name: Build Docker Image
         run: |
           docker build -t mdnafiulhasanhamim/backend-image:latest .
-        working-directory: backend/backend.api  # Ensure this is the correct path to your Dockerfile
-
-      - name: Log in to Docker Hub
+        working-directory: backend/backend.api
+      
+      - name: Push Docker Image
+        if: github.ref == 'refs/heads/main'
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
@@ -53,7 +54,7 @@ jobs:
 
       - name: Push Docker Image to Registry
         run: |
-          docker tag mdnafiulhasanhamim/backend-image:latest mdnafiulhasanhamim/backend-image:latest
+          docker tag mdnafiulhasanhamim:latest mdnafiulhasanhamim/backend-image:latest
           docker push mdnafiulhasanhamim/backend-image:latest
 
   publish:
