--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,21 +40,24 @@ jobs:
       #   working-directory: backend
       #   run: dotnet test backend.sln --no-build --configuration Release --collect:"XPlat Code Coverage"
       
+      
+      # Build Docker Image
       - name: Build Docker Image
         run: |
-          docker build -t mdnafiulhasanhamim/backend-image:latest .
-        working-directory: backend/backend.api
-      
+          docker build -t mdnafiulhasanhamim/backend-image:latest -f backend/backend.api/Dockerfile backend/backend.api
+          
+      # Log in to Docker Hub
       - name: Push Docker Image
         if: github.ref == 'refs/heads/main'
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-
+      
+      # Tag and Push Docker Image to Registry
       - name: Push Docker Image to Registry
         run: |
-          docker tag backend-image:latest mdnafiulhasanhamim/backend-image:latest
+          docker tag mdnafiulhasanhamim/backend-image:latest mdnafiulhasanhamim/backend-image:latest
           docker push mdnafiulhasanhamim/backend-image:latest
 
   publish:
