--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -90,7 +90,7 @@ jobs:
       - name: Push Docker Image to Registry
         run: |
           docker-compose -f backend/backend.api/docker-compose.yml push
-        working-directory: backend/backend.api
+        # working-directory: backend/backend.api
 
 
   publish:
