--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -86,6 +86,11 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
+      # Tag Docker Image before pushing
+      - name: Tag Docker Image
+        run: |
+          docker tag backend-image:latest mdnafiulhasanhamim/backend-image:latest
+      
       # Tag and Push Docker Image to Registry
       - name: Push Docker Image to Registry
         run: |
