--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -91,8 +91,7 @@ jobs:
         run: |
           docker tag backend-image:latest mdnafiulhasanhamim/backend-image:latest
       
-      # Tag and Push Docker Image to Registry
-      
+      # Tag and Push Docker Image to hub
       - name: Push Docker Image to Registry
         run: |
           docker-compose -f backend/backend.api/docker-compose.yml push
