workflow updated with docker hub

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -66,21 +66,20 @@ jobs:
         run: |
           sudo curl -L "https://github.com/docker/compose/releases/download/1.29.2/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
           sudo chmod +x /usr/local/bin/docker-compose
-      
+
       # Check if docker-compose.yml exists in the correct path
       - name: Check if docker-compose.yml exists
         run: |
           ls -l backend/backend.api/
-      
+
       # Build Docker Image using Docker Compose
       - name: Build Docker Compose Image
         run: |
           docker-compose -f backend/backend.api/docker-compose.yml build
-        # working-directory: backend/backend.api
+        working-directory: backend/backend.api
 
       # Log in to Docker Hub
-      - name: Push Docker Image
-        if: github.ref == 'refs/heads/main'
+      - name: Docker Hub Login
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
@@ -90,13 +89,12 @@ jobs:
       - name: Tag Docker Image
         run: |
           docker tag backend-image:latest mdnafiulhasanhamim/backend-image:latest
-      
-      # Tag and Push Docker Image to hub
+
+      # Push Docker Image to Docker Hub
       - name: Push Docker Image to Registry
         run: |
           docker-compose -f backend/backend.api/docker-compose.yml push
-        # working-directory: backend/backend.api
-
+        working-directory: backend/backend.api
 
   publish:
     name: Publish Application
