--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -76,7 +76,7 @@ jobs:
       - name: Build Docker Compose Image
         run: |
           docker-compose -f backend/backend.api/docker-compose.yml build
-        working-directory: backend/backend.api
+        # working-directory: backend/backend.api
 
       # Log in to Docker Hub
       - name: Docker Hub Login
@@ -94,7 +94,7 @@ jobs:
       - name: Push Docker Image to Registry
         run: |
           docker-compose -f backend/backend.api/docker-compose.yml push
-        working-directory: backend/backend.api
+        # working-directory: backend/backend.api
 
   publish:
     name: Publish Application
