--- a/backend/backend.api/docker-compose.yml
+++ b/backend/backend.api/docker-compose.yml
@@ -3,7 +3,8 @@ version: '3.8'
 services:
   backend:
     container_name: backend-container
-    image: backend-image
+    # image: backend-image
+    image: mdnafiulhasanhamim/backend-image:latest
     build:
       context: ./
       dockerfile: ./Dockerfile
