--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -8,8 +8,9 @@ obj/Debug/net8.0/*
 *.dlls
 *.pdb
 *.pdbs
-./Api/Server/appsettings.json
-./Api/Server/appsettings.Development.json
+**/appsettings.json
+**/appsettings.Development.json
+
 
 
 
