--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,3 +1,70 @@
+# # ================================
+# # Stage 1: Build & Restore Dependencies
+# # ================================
+# FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
+
+# # Set working directory inside the container
+# WORKDIR /app
+
+# # Copy the solution file
+# COPY Aspire/Aspire.sln ./
+
+# # Copy all project files while maintaining folder structure
+# COPY Api/Server/ Api/Server/
+# COPY Aspire/ Aspire/
+# COPY Api/Framework/Core/ Api/Framework/Core/
+# COPY Api/Framework/Infrastructure/ Api/Framework/Infrastructure/
+# COPY Api/Migrations/PGSql/ Api/Migrations/PGSql/
+# COPY Api/Module/Experties/ Api/Module/Experties/
+# COPY Api/Module/Jobs/ Api/Module/Jobs/
+# COPY Shared/ Shared/
+# COPY TalentMesh.test/ TalentMesh.test/
+
+# # ✅ Ensure the `assets` directory is copied safely
+# RUN mkdir -p /app/assets
+# COPY Api/Server/assets/ /app/assets/
+# RUN chmod -R 755 /app/assets  # Set correct permissions
+
+# # Restore dependencies (cached for performance)
+# RUN dotnet restore Aspire/Aspire.sln
+
+# # ================================
+# # Stage 2: Build & Publish Application
+# # ================================
+# FROM build AS publish
+
+# # Copy the full source code
+# COPY . .
+
+# # Build the application in Release mode
+# RUN dotnet build Aspire/Aspire.sln -c Release --no-restore
+
+# # Publish the application
+# RUN dotnet publish Aspire/Aspire.sln -c Release -o /app/publish --no-build
+
+# # ================================
+# # Stage 3: Runtime (Final Image)
+# # ================================
+# FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS runtime
+
+# # Set working directory inside the container
+# WORKDIR /app
+
+# # Copy the published files from the build stage
+# COPY --from=publish /app/publish .
+
+# # Ensure `assets` directory exists in final container
+# RUN mkdir -p /app/assets && chmod -R 755 /app/assets
+
+# # Expose the application ports
+# EXPOSE 8000
+# EXPOSE 8001
+
+# # Set the entrypoint command
+# ENTRYPOINT ["dotnet", "Server.dll"]
+
+
+
 # ================================
 # Stage 1: Build & Restore Dependencies
 # ================================
@@ -6,10 +73,8 @@ FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 # Set working directory inside the container
 WORKDIR /app
 
-# Copy the solution file
+# Copy the solution file and all project files
 COPY Aspire/Aspire.sln ./
-
-# Copy all project files while maintaining folder structure
 COPY Api/Server/ Api/Server/
 COPY Aspire/ Aspire/
 COPY Api/Framework/Core/ Api/Framework/Core/
@@ -18,9 +83,9 @@ COPY Api/Migrations/PGSql/ Api/Migrations/PGSql/
 COPY Api/Module/Experties/ Api/Module/Experties/
 COPY Api/Module/Jobs/ Api/Module/Jobs/
 COPY Shared/ Shared/
-COPY TalentMesh.test/ TalentMesh.test/
+# COPY TalentMesh.test/ TalentMesh.test/
 
-# ✅ Ensure the `assets` directory is copied safely
+# ✅ Ensure `assets` directory is copied safely
 RUN mkdir -p /app/assets
 COPY Api/Server/assets/ /app/assets/
 RUN chmod -R 755 /app/assets  # Set correct permissions
@@ -32,9 +97,6 @@ RUN dotnet restore Aspire/Aspire.sln
 # Stage 2: Build & Publish Application
 # ================================
 FROM build AS publish
-
-# Copy the full source code
-COPY . .
 
 # Build the application in Release mode
 RUN dotnet build Aspire/Aspire.sln -c Release --no-restore
@@ -56,11 +118,13 @@ COPY --from=publish /app/publish .
 # Ensure `assets` directory exists in final container
 RUN mkdir -p /app/assets && chmod -R 755 /app/assets
 
-# Expose the application ports
-EXPOSE 17078
-EXPOSE 15233
+# ✅ Expose ports needed for Aspire integration
 EXPOSE 8000
 EXPOSE 8001
+EXPOSE 18888
+
+# ✅ Define environment variable to enable Aspire telemetry
+ENV DOTNET_DASHBOARD_URL="http://aspire:18888"
 
 # Set the entrypoint command
 ENTRYPOINT ["dotnet", "Server.dll"]
