--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -122,5 +122,5 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: published-app
-          path: backend/backend.api/publish/
+          # path: backend/backend.api/publish/
           path: backend/Api/Server/publish/
