--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,7 +43,7 @@ jobs:
       #   run: dotnet test backend.sln --no-build --configuration Release --collect:"XPlat Code Coverage"
 
       - name: Run Tests for All Modules
-        run: dotnet test backend/Api/Module/Experties/Experties.Test/Experties.Test.csproj --no-build --configuration Release
+        run: dotnet test backend/Api/Module/Experties/Experties.Test --no-build --configuration Release
 
       
       # Build Docker Image
