--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,13 +43,7 @@ jobs:
       #   run: dotnet test backend.sln --no-build --configuration Release --collect:"XPlat Code Coverage"
 
       - name: Run Tests for All Modules
-        run: |
-          for proj in $(find backend/Api/Module -type f -name "*.csproj" -path "*/.Test"); do
-            echo "Running tests for $proj"
-            dotnet test "$proj" --no-build --configuration Release --logger:"console;verbosity=normal"
-          done
-
-
+        run: dotnet test backend/Api/Module/Experties/Experties.Test
       
       # Build Docker Image
       # - name: Build Docker Image
