--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,6 +44,15 @@ jobs:
 
       - name: Run Tests for All Modules
         run: dotnet test backend/Api/Module/Experties/Experties.Test
+
+      - name: Run Tests for All Modules
+        run: |
+          for test_project in $(find backend/Api/Module -type f -name "*.Test.csproj")
+          do
+           echo "Running tests for: $test_project"
+           dotnet test "$test_project" --no-build --configuration Release
+          done
+
       
       # Build Docker Image
       # - name: Build Docker Image
