--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,7 +47,7 @@ jobs:
 
       - name: Run Tests for All Modules
         run: |
-          for test_project in $(find backend/Api/Module -type f -name "*.Test.csproj")
+          for test_project in $(find backend/Api/Module -type d -name "*.Test")
           do
            echo "Running tests for: $test_project"
            dotnet test "$test_project" --no-build --configuration Release
