--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -55,8 +55,7 @@ jobs:
 
       - name: Run Tests for All Modules in Parallel
         run: |
-          find backend/Api/Module -type d -name "*.Test" | xargs -n 1 -P 4 dotnet test
-
+          find backend/Api/Module -type d -name "*.Test" | xargs -n 1 -P 4 sh -c 'echo "Running tests for module: $(basename {})" && dotnet test {}'
 
       
       # Build Docker Image
