--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -55,7 +55,7 @@ jobs:
 
       - name: Run Tests for All Modules in Parallel
         run: |
-          find backend/Api/Module -type d -name "*.Test" | xargs -n 1 -P 4 'echo "Running tests for module: {}"; dotnet test'
+          find backend/Api/Module -type d -name "*.Test" | xargs -n 1 -P 4 -I 'echo "Running tests for module: {}"; dotnet test'
 
       
       # Build Docker Image
