--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,9 +4,11 @@ on:
   push:
     branches:
       - main
+      - development
   pull_request:
     branches:
       - main
+      - development
 
 jobs:
   build:
@@ -45,16 +47,15 @@ jobs:
       # - name: Run Tests for All Modules
       #   run: dotnet test backend/Api/Module/Experties/Experties.Test
 
-
       - name: Run Tests for All Modules in Parallel
         run: |
           find backend/Api/Module -type d -name "*.Test" | xargs -n 1 -P 4 -I {} sh -c 'echo "Running tests for module: {}"; dotnet test "{}"'
-      
+
       # Build Docker Image
       # - name: Build Docker Image
       #   run: |
       #     docker build -t mdnafiulhasanhamim/backend-image:latest -f backend/backend.api/Dockerfile backend/backend.api
-          
+
       # # Log in to Docker Hub
       # - name: Push Docker Image
       #   if: github.ref == 'refs/heads/main'
@@ -62,14 +63,13 @@ jobs:
       #   with:
       #     username: ${{ secrets.DOCKER_USERNAME }}
       #     password: ${{ secrets.DOCKER_PASSWORD }}
-      
+
       # # Tag and Push Docker Image to Registry
       # - name: Push Docker Image to Registry
       #   run: |
       #     docker tag mdnafiulhasanhamim/backend-image:latest mdnafiulhasanhamim/backend-image:latest
       #     docker push mdnafiulhasanhamim/backend-image:latest
 
-      
       # Install Docker Compose
       # - name: Install Docker Compose
       #   run: |
