--- a/backend/Api/Module/Quizzes/Quizzes.Test/Quizzes.Test.csproj
+++ b/backend/Api/Module/Quizzes/Quizzes.Test/Quizzes.Test.csproj
@@ -17,6 +17,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\..\Test\Test.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Using Include="Xunit" />
   </ItemGroup>
 
