code coverage report and dockerhub

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -14,6 +14,7 @@ COPY Api/Framework/Infrastructure/ Api/Framework/Infrastructure/
 COPY Api/Migrations/PGSql/ Api/Migrations/PGSql/
 COPY Api/Module/Candidate/ Api/Module/Candidate/
 COPY Api/Module/Experties/ Api/Module/Experties/
+COPY Api/Module/Evaluator/ Api/Module/Evaluator/
 COPY Api/Module/Interviews/ Api/Module/Interviews/
 COPY Api/Module/Jobs/ Api/Module/Jobs/
 COPY Api/Module/Notifications/ Api/Module/Notifications/
